add mobile layout

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <button id="btnAuto">Auto layout</button>
       <button id="btnCenter">Center view</button>
       <button id="btnReset">Reset</button>
+      <button id="btnPanel" class="ghost">Panel</button>
     </div>
 
     <div class="hint">
