add confirm message, add node & siblings on mobile

--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
 
   <!-- Mobile bottom bar -->
   <div class="mobile-bar mobile-only" id="mobileBar">
-    <button class="primary" id="mAdd">+ Child</button>
-    <button id="mEdit">Edit</button>
-    <button id="mAuto">Layout</button>
+    <button class="primary" id="mAddChild">+ Child</button>
+    <button class="primary" id="mAddSibling">+ Sibling</button>
+    <button id="mCenter">Center</button>
+    <button id="mAuto">Auto Layout</button>
     <button id="mPanel">Panel</button>
   </div>
 
@@ -116,14 +117,14 @@
       <input id="mNodeTitle" type="text" placeholder="Title" />
     </div>
 
-    <div class="field">
+    <!-- <div class="field">
       <label>Notes</label>
       <textarea id="mNodeNotes" placeholder="Notes"></textarea>
-    </div>
+    </div> -->
 
     <div class="row">
       <button class="primary" id="mSave">Save</button>
-      <button id="mCenter">Center</button>
+      
       <button class="danger" id="mDelete">Delete</button>
     </div>
 
