--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
         <textarea id="nodeNotes" placeholder="Evidence, assumptions, next test..."></textarea>
       </div>
 
+      <div class="field">
+        <label>Color</label>
+        <input id="nodeColor" type="color" value="#121b3d" />
+      </div>
+
+
       <div class="row">
         <button class="primary" id="btnSaveNode">Save</button>
         <button id="btnClearManual">Clear manual position</button>
@@ -123,6 +129,12 @@
       <label>Notes</label>
       <textarea id="mNodeNotes" placeholder="Notes"></textarea>
     </div> -->
+
+    <div class="field">
+      <label>Color</label>
+      <input id="mNodeColor" type="color" value="#121b3d" />
+    </div>
+
 
     <div class="row">
       <button class="primary" id="mSave">Save</button>
